fixed concept page layout to avoid visualization overlap
introduced a ".sections" wrapping DIV to establish an independent block
formatting context:
http://www.w3.org/TR/CSS21/visuren.html#block-formatting

this allows us to float the visualization, making it act like a column
without the layout being affected by section headings' `clear`
declarations

--- a/public/stylesheets/iqvoc/iqvoc.css
+++ b/public/stylesheets/iqvoc/iqvoc.css
@@ -81,14 +81,13 @@ ul.letter_selector { width: 100%; overflow: auto; margin: 0 0 10px; padding: 0; 
 
 /* visualizations */
 
-#infovis_wrapper {
-	position: relative;
+.sections {
+	overflow: hidden; /* block formatting context */
+	zoom: 1; /* hasLayout */
 }
 
 #infovis {
-	position: absolute;
-	top: 0;
-	right: 0;
+	float: right;
 	width: 300px;
 	height: 300px;
 	overflow: hidden;
